--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "protected-routes",
+  "name": "server-side-rendering",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
+    "dev": "react-router dev --host",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
