--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-query-devtools": "^5.76.1",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -18,6 +22,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "tailwindcss": "^4.1.4",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
